--- a/index.css
+++ b/index.css
@@ -32,5 +32,18 @@ body {
     font-size: 4vmax;
 }
 #menu {
-    height: 8vmax;    
+    #menu {
+        display: flex;    
+        height: 8vmax;
+    }
+    #menu i{
+        flex: 1;    
+        display: flex;    
+        justify-content: center;
+        align-items: center;
+        color: white;
+        background-color: #950E17;
+        font-size: 5vmax;
+        cursor: pointer;    
+    }  
 }
