--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
     min-height: -webkit-fill-available;    
     margin: 0px;    
     font-family: 'Times New Roman', Times, serif;    
-    background-color: #98c5e2;    
+    background-color: #98c5e2; 
 }
 #superior {
     display: flex;
@@ -32,18 +32,33 @@ body {
     font-size: 4vmax;
 }
 #menu {
-    #menu {
-        display: flex;    
-        height: 8vmax;
+    height: 8vmax;
+}  
+#menu {
+    display: flex;
+    height: 8vmax;
+}
+#menu i{
+    flex: 1;    
+    display: flex;    
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: #360e95;
+    font-size: 5vmax;
+    cursor: pointer;    
+}
+@media (orientation: landscape) {
+    body {
+        flex-direction: row;    /* sobreescriu la declaració flex-direction: column; */
+        flex-flow: row-reverse;    /* disposició de dreta a esquerra, per mostrar el menú a l'esquerra */
     }
-    #menu i{
-        flex: 1;    
-        display: flex;    
-        justify-content: center;
-        align-items: center;
-        color: white;
-        background-color: #950E17;
-        font-size: 5vmax;
-        cursor: pointer;    
-    }  
+    #superior {
+        display: none;    /* franja superior oculta per optimitzar l'espai */
+    }
+    #menu {
+        flex-direction: column;
+        width: 8vmax;
+        height: auto;    /* sobreescriu la declaració height: 8vmax; */
+    }
 }
