--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
     min-height: 100svh;    
     min-height: -webkit-fill-available;    
     margin: 0px;    
-    font-family: 'Times New Roman', Times, serif;    
+    font-family: system-ui;
     background-color: #98c5e2; 
 }
 #superior {
@@ -24,12 +24,6 @@ body {
 .seccio {
     flex: 1;    
     display: none;    
-}
-#seccio_1 {
-    display: none;    
-    justify-content: center;    
-    align-items: center;    
-    font-size: 4vmax;
 }
 #menu {
     height: 8vmax;
@@ -63,10 +57,37 @@ body {
     }
 }
 #seccio_0 {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 4vmax;
+}
+#seccio_1 {
+    display: none;    
+    justify-content: center;    
+    align-items: center;    
+    font-size: 4vmax;
+}
+#seccio_2 {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 4vmax;
+}
+#seccio_3 {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex;
+    font-size: 4vmax;
+}
+#seccio_4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex;
     font-size: 4vmax;
 }
 #credencials {
@@ -91,4 +112,104 @@ body {
     font-size: 3vmax;
     padding: 2vmin;
     margin: 1vmin;
+}
+#div_foto {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#icona_camera {
+    font-size: 40vmin;
+    color: #360e95;
+}
+#foto {
+    max-width: 60vmin;    /* dimensions màximes per a la prveisualització de les fotos */
+    max-height: 60vmin;
+    cursor: pointer;
+}
+#div_control {
+    height: 25vmax;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+#div_control i {
+    cursor: pointer;
+    font-size: 20vmin;    
+    color: blue;
+}
+#obturador {
+    position: absolute;
+    width: 0;
+    opacity: 0;
+}
+#canvas, #desa {
+    display: none;
+}
+#div_gran {
+    display: none;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    max-height: 100vh;
+    max-height: 100svh;
+    max-height: -webkit-fill-available;
+}
+#foto_gran {
+    max-width: 95vmin;
+    max-height: 95vmax;
+    cursor: pointer;
+}
+@media (orientation: landscape) {
+    #seccio_2 {
+        flex-direction: row;
+    }
+    #div_foto {
+        flex-direction: column;
+    }
+    #div_control {
+        width: 25vmax;
+        height: auto;
+        flex-direction: column;
+    }
+    #div_gran {
+        max-height: 100vh;
+        max-height: 100svh;
+    }
+    #foto_gran {
+        transform: rotate(-90deg);    /* gir de 90 graus correponent al canvi d'orientació */
+    }
+}
+#llista_titol {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+#llista_titol i {
+    font-size: 4vmax;
+    color:#360e95;
+}
+#llista_titol i:nth-child(1) {    /* primer <i> (miniatura de la foto) */
+    flex: 2;
+}
+#llista_titol i:nth-child(2) {    /* segon <i> (data i hora) */
+    flex: 3;
+}
+#llista_titol i:nth-child(3) {    /* tercer <i> (icona per esborrar la foto) */
+    flex: 1;
+}
+#llista_fotos {
+    height: 70vmax;
+    overflow-y: scroll;
+}
+#llista_fotos::-webkit-scrollbar {
+    display: none;    /* oculta la barra de desplaçament vertical */
+}
+@media (orientation: landscape) {
+    #llista_fotos {
+        height: 70vmin;
+    }
 }
